Robot test added.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -5,11 +5,19 @@ extends =
 package-name = example.tdd
 package-extras = [test]
 
-parts += omelette
+extensions = mr.developer
+auto-checkout =
+    plone.act
+    robotframework-selenium2library
+sources = sources
 
 [test]
 defaults = ['-s', '${buildout:package-name}', '--auto-color', '--auto-progress']
 
-[omelette]
-recipe = collective.recipe.omelette
-eggs = ${instance:eggs}
+[remotes]
+plone = git://github.com/plone
+plone_push = git@github.com:plone
+
+[sources]
+plone.act = git ${remotes:plone}/plone.act.git pushurl=${remotes:plone_push}/plone.act.git
+robotframework-selenium2library = git git://github.com/rtomac/robotframework-selenium2library.git
